<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    >
<LinearLayout 
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/back2" >

    <Button
        android:id="@+id/t2"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/t1"
        android:layout_below="@+id/t1"
        
        android:text="@string/Tutorial_1" />

    <Button
        android:id="@+id/t1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/Tutorial_2" />
	<Button
        android:id="@+id/t3"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/Tutorial_3" />
	<Button
        android:id="@+id/t4"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/Tutorial_4" />
	<Button
        android:id="@+id/t5"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/Tutorial_5" />
</LinearLayout>
</ScrollView>