<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/back2" >

    <GridLayout
        android:id="@+id/gridLayout1"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:columnCount="3"
        tools:context="com.example.contact.MainActivity" >

        <TextView
            android:id="@+id/txt1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_column="0"
            android:textColor="@color/black"
            android:layout_row="0"
            android:text="@string/address"
            android:textSize="20sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="1"
            android:layout_row="0"
            android:textColor="@color/black"
            android:text="@string/dot"
            android:textSize="20sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="1"
            android:layout_row="3"
            android:textColor="@color/black"
            android:text="@string/dot"
            android:textSize="20sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="1"
            android:layout_row="4"
            android:textColor="@color/black"
            android:text="@string/dot"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/txt2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="2"
            android:layout_row="0"
            android:textColor="@color/black"
            android:paddingLeft="10dp"
            android:text="@string/add1"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/txt3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="2"
            android:layout_row="1"
            android:textColor="@color/black"
            android:paddingLeft="10dp"
            android:text="@string/add2"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/txt4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="2"
            android:layout_row="2"
            android:textColor="@color/black"
            android:paddingLeft="10dp"
            android:text="Dharmaj-388430."
            android:textSize="20sp" />

        <TextView
            android:id="@+id/txt5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_row="3"
            android:textColor="@color/black"
            android:text="@string/contact"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/txt6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="2"
            android:layout_row="3"
            android:textColor="@color/black"
            android:paddingLeft="10dp"
            android:text="@string/tel"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/txt7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_row="4"
            android:textColor="@color/black"
            android:text="@string/web"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/txt8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="2"
            android:layout_row="4"
            android:textColor="@color/black"
            android:paddingLeft="10dp"
            android:text="@string/web1"
            android:textSize="20sp" />
    </GridLayout>

    <Button
        android:id="@+id/button1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/gridLayout1"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="18dp"
        android:text="@string/map" />

</RelativeLayout>