<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/back2">
<GridLayout 
    android:id="@+id/GridLayout1"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    
    android:columnCount="3" >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="0"
        android:layout_row="0"
        android:text="@string/name"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="1"
        android:layout_row="0"
        android:paddingTop="10dp"
        android:textColor="@color/black"
        android:text="@string/dot"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
 
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="0"
        android:layout_row="1"
        android:text="@string/branch"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="1"
        android:layout_row="1"
        android:textColor="@color/black"
      android:text="@string/dot"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
      
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="0"
        android:layout_row="2"
        android:text="@string/enrol1"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="1"
        android:textColor="@color/black"
        android:layout_row="2"
        android:text="@string/dot"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
       
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="0"
        android:textColor="@color/black"
        android:layout_row="3"
        android:text="@string/year"
        android:textSize="20sp"
        android:textStyle="bold" />

   

  
<TextView
    
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="0"
        android:layout_row="4"
        android:text="@string/pas"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="1"
        android:layout_row="4"
        android:textColor="@color/black"
        android:text="@string/dot"
        android:textSize="20sp"
        android:textStyle="bold" />
 <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="0"
        android:layout_row="5"
        android:text="@string/email"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold" />
 <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="1"
        android:layout_row="5"
        android:textColor="@color/black"
        android:text="@string/dot"
        android:textSize="20sp"
        android:textStyle="bold" />
    <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_column="2"
        android:textColor="@color/black"
        android:layout_row="0"
        android:id="@+id/name"
      />

    <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_column="2"
        android:textColor="@color/black"
        android:layout_row="1"
        android:id="@+id/branch"
        />

    <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_column="2"
        android:layout_row="2"
        android:textColor="@color/black"
        android:inputType="number"
    	android:id="@+id/enrollment" />
<EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_column="2"
        android:layout_row="5"
        android:textColor="@color/black"
        android:inputType="textEmailAddress"
    	android:id="@+id/email" />
    <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_column="2"
        android:textColor="@color/black"
        android:id="@+id/year"
        android:layout_row="3" />
    
	<EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_column="2"
        android:textColor="@color/black"
		android:id="@+id/password"
		android:inputType="textPassword"
        android:layout_row="4" />
    
</GridLayout>

<Button
    android:id="@+id/submit"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_alignParentBottom="true"
    android:textColor="@color/black"
    android:gravity="center_horizontal"
    android:layout_centerHorizontal="true"
    android:layout_marginBottom="84dp"
    android:text="@string/submit" />



</RelativeLayout>